<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="expenses_manager">Expenses Manager</string>
    <string name="passwords_manager">Passwords Manager</string>
    <string name="all_movements">All Movements</string>
    <string name="settings">Settings</string>
    <string name="management_settings">Management Settings</string>
    <string name="account">Account</string>
    <string name="help_faqs">FAQs &amp; Support</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_app">Rate app</string>
    <string name="confirmation">Continue</string>
    <string name="hint_first_name_red">First name<font fgcolor='#C80000'>*</font></string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_red">Email<font fgcolor='#C80000'>*</font></string>
    <string name="hint_phone">Phone<font fgcolor='#C80000'>*</font></string>
    <string name="hint_dateBirthdate_red">Birthdate<font fgcolor='#C80000'>*</font></string>
    <string name="hint_dateBirthdate">Birthdate</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_red">Password<font fgcolor='#C80000'>*</font></string>
    <string name="hint_search">Search here …</string>
    <string name="hint_repeatPassword">Repeat password<font fgcolor='#C80000'>*</font></string>
    <string name="terms">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_terms_and_conditions">I agree to the %1$s and %2$s.</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="join_now">Join now!</string>
    <string name="or">or</string>
    <string name="planned_events">Planned events</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="task">Task</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="incomesAndExpenses">Incomes and expenses</string>
    <string name="movements">Movements</string>
    <string name="movement">Movement</string>
    <string name="latest_movements">Latest movements:</string>
    <string name="see_all_movements">See all movements</string>
    <string name="group">Group</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="google_sign_up_type">Google Sign Up</string>
    <string name="facebook_sign_up_type">Facebook Sign Up</string>
    <string name="username_copied">Username copied</string>
    <string name="email_copied">Email copied</string>
    <string name="password_copied">Password copied</string>
    <string name="time_once">ONCE</string>
    <string name="time_daily">DAILY</string>
    <string name="time_weekly">WEEKLY</string>
    <string name="time_monthly">MONTHLY</string>
    <string name="time_annual">ANNUAL</string>
    <string name="priority_low">LOW</string>
    <string name="priority_medium">MEDIUM</string>
    <string name="priority_high">HIGH</string>
    <string name="priority_urgent">URGENT</string>
    <string name="status_completed">COMPLETED</string>
    <string name="status_pending">PENDING</string>
    <string name="status_in_progress">IN PROGRESS</string>
    <string name="status_cancelled">CANCELLED</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="security">Security</string>
    <string name="currency">Currency</string>
    <string name="reset_password">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirmation_title">Do you want to log out?</string>
    <string name="delete_account_confirmation_title">Do you want to delete your account?</string>
    <string name="confirmation_twice">Do you still want it?</string>
    <string name="delete_account_confirmation_message">, you will delete all your data from the system.</string>
    <string name="descripting_message_for_help">Didn\'t find the answer you were looking for? \nContact our support center!</string>
    <string name="need_help">Need help?</string>
    <string name="help">Help</string>
    <string name="go_to_our_website">Go to our website</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="email_us">Email Us</string>
    <string name="find_question">Find question...</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit profile</string>
    <string name="advanced_options">Advanced options</string>
    <string name="delete_account">Delete account</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong please try again later.</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="pwdsDontMatch">Passwords don\'t match</string>
    <string name="weakPassword">Must contain at least 8 characters, numbers, uppercase and special characters.</string>
    <string name="invalidEmail">Invalid email.</string>
    <string name="field_obligatory">This field is obligatory.</string>
    <string name="collision_auth">The email address is already in use.</string>
    <string name="participants">Participants</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="repetition">Repetition</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_time">Starts At:</string>
    <string name="end_time">Ends at:</string>
    <string name="location">Location</string>
    <string name="select_a_color">Select a color</string>
    <string name="date">Date</string>
    <string name="due_date">Due date</string>
    <string name="priority">Priority</string>
    <string name="status">Status</string>
    <string name="select">Select</string>
    <string name="reached_max_categories">The maximum are 3</string>
    <string name="type_anything">Type anything first.</string>
    <string name="changes_will_lost">Changes will be lost</string>
    <string name="confirm_lost_changes_message">If you continue, unsaved changes will be lost.</string>
    <string name="err_end_date_incorrect">The end date has to be the same or later than the start date</string>
    <string name="concept">Concept</string>
    <string name="amount">Amount</string>
    <string name="account_title_hint">Account title</string>
    <string name="copy_users_text_to_clipboard">Copy users text to clipboard</string>
    <string name="copy_email_text_to_clipboard">Copy email text to clipboard.</string>
    <string name="copy_password_text_to_clipboard">Copy password text to clipboard</string>
    <string name="other">Other</string>
    <string name="group_title_hint">Group title</string>
    <string name="edit">Edit</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_confirmation">Are you sure you want to remove it?</string>
    <string name="delete_password_group_message">This action is irreversible, the group and all accounts within it will be deleted.</string>
    <string name="delete_event_message">This action is irreversible, this plan will be deleted.</string>
    <string name="try_later">Something went wrong, try again later.</string>
    <string name="faqs">FAQs</string>
    <string name="nothing_planned_yet">Nothing planned yet</string>
    <string name="event_deleted">Selected item has been deleted</string>
    <string name="undo">Undo</string>
    <string name="error_unmodified_fields">Please update any field before save changes.</string>
    <string name="delete">Delete</string>
    <string name="at_least_one_account">There must be at least one account</string>
    <string name="password_weak">Password is weak</string>
    <string name="password_medium">Password is medium</string>
    <string name="password_strong">Password is strong</string>
    <string name="minAgeError">You must be at least %d years old to register.</string>
    <string name="information_about_security_phrase">This is your security phrase, it is unique to you and essential to access your account vault. Treat it like a physical key: only you should know it and you should keep it in a safe place, if you lose this phrase, you will lose access to your saved accounts and we will not be able to recover it, <b>so keep it safe!</b></string>
    <string name="inner_welcome_2_user">Welcome to Mind Master,\n%s!</string>
    <string name="inner_welcome_back_2_user">Welcome back,\n%s!</string>
    <string name="security_phrase_hint">Security phrase</string>
    <string name="responsibility_agreement_security_phrase">I agree that if I lose this passphrase, I will lose full access to my Account Vault.</string>
    <string name="continue_">Continue</string>
    <string name="continue_timer">Continue(%d)</string>
    <string name="copied_2_clipboard">Copied to clipboard</string>
    <string name="security_phrase">Security Phrase</string>
    <string name="attach_security_phrase">Enter your secure phrase here or, alternatively, attach the complete file.</string>
    <string name="attach">Attach</string>
    <string name="attach_zone_content_description">Attach zone</string>
    <string name="incorrect_secure_phrase_err">Incorrect secure phrase</string>
    <string name="reading_file_err">Error reading file</string>
    <string name="invalid_file_type_err">Invalid file type. Only .txt files are allowed.</string>
    <string name="fill_secure_phrase_or_attach_file">You must fill in the field or attach a file</string>
    <string name="clear">Clear</string>
    <string name="unknown_file_name">Unknown name</string>
    <string name="change_account">Change account</string>
    <string name="verify_email">Verify your email</string>
    <string name="verify_email_message">We have sent you an email to your email address, don\'t forget to check your <b>spam folder.</b></string>
    <string name="tap_again_to_exit">Tap again to exit.</string>
    <string name="balance">Balance</string>
    <string name="under_development">Sorry. This section is currently under development.</string>
    <string name="reset_password_msg">We have sent you an email to reset your password. Don\'t forget to check your spam folder.</string>
    <string name="no_email_app_installed">There is no mail application installed.</string>
    <string name="accept_this_permission_to_continue">You must accept this permission if you wish to proceed with the intended action.</string>
    <string name="accept_permissions">Please accept permissions</string>
    <string name="see_faqs">See FAQs</string>
    <string name="default_notifications_title">Check Your Schedule</string>
    <string name="default_notifications_message">Check your schedule, some of your activities are about to expire.</string>
</resources>