<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.welcome.LogInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_white"
                app:tint="@color/primaryColor" />

            <TextView
                style="main_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mind_master_logo"
                android:textColor="@color/gray_scorpion_200"
                android:textSize="20sp" />


        </LinearLayout>

        <Spinner
            android:id="@+id/sp_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/giv_productivity"
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_below="@id/ll_logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/productivity_anim" />

        <TextView
            android:id="@+id/tv_welcome_title"
            style="@style/main_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/giv_productivity"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textColor="@color/primaryColor" />

        <LinearLayout
            android:id="@+id/ll_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome_title"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/secondary_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/gray_dark_700" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/form_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_email_24">

                <EditText
                    android:id="@+id/txt_email_logIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxEms="250"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/form_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock_24">

                <EditText
                    android:id="@+id/txt_password_logIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxEms="20"
                    android:minEms="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/popings_regular_400"
                android:text="error"
                android:textColor="@color/red_error_500"
                android:textSize="15sp"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/efab_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:iconTint="@color/white" />

            <TextView
                style="@style/secondary_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/gray_dark_700" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/efab_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#d1432c"
                    android:text="@string/google"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:icon="@drawable/google_logo"
                    app:iconGravity="textStart"
                    app:iconTint="@color/white" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/efab_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#315f93"
                    android:enabled="false"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:icon="@drawable/facebook_logo"
                    app:iconTint="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_forgotten_password"
                style="@style/body_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/forgotten_password"
                android:textAllCaps="false"
                android:textColor="@color/blue_cello_900" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/body_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/blue_cello_900" />

                <Button
                    android:id="@+id/btn_signUp"
                    style="@style/body_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/orange" />

            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>